2024-11-01 Se agrega piezas por kilos a reporte de pesadas.

--- a/CódigoFuente/BitacorasProduccion/Views/ReportePesadas/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ReportePesadas/Index.cshtml
@@ -113,8 +113,9 @@
                                         <th>@Html.DisplayNameFor(model => model.Advance)</th>
                                         <th>@Html.DisplayNameFor(model => model.peso_teorico_acero)</th>
                                         <th>@Html.DisplayNameFor(model => model.Peso_Bruto_SAP)</th>
-                                        <th>@Html.DisplayNameFor(model => model.Total_de_piezas)</th>
                                         <th>@Html.DisplayNameFor(model => model.Peso_Etiqueta)</th>
+                                        <th>@Html.DisplayNameFor(model => model.Total_de_piezas)</th>
+                                        <th>@Html.DisplayNameFor(model => model.piezas_x_diferencia_sin_atipicos)</th>
                                         <th class="bg-success">@Html.DisplayNameFor(model => model.fecha_inicio_validez_peso_bom)</th>
                                         <th class="bg-success">@Html.DisplayNameFor(model => model.fecha_fin_validez_peso_bom)</th>
                                     </tr>
@@ -145,8 +146,9 @@
                                             <td>@Html.DisplayFor(modelItem => item.Advance)</td>
                                             <td>@Html.DisplayFor(modelItem => item.peso_teorico_acero)</td>
                                             <td>@Html.DisplayFor(modelItem => item.Peso_Bruto_SAP)</td>
-                                            <td>@Html.DisplayFor(modelItem => item.Total_de_piezas)</td>
                                             <td>@Html.DisplayFor(modelItem => item.Peso_Etiqueta)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.Total_de_piezas)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.piezas_x_diferencia_sin_atipicos)</td>
                                             <td style="background-color: @background">
                                                 @Html.DisplayFor(modelItem => item.fecha_inicio_validez_peso_bom)
                                             </td>
