--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditBudget.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditBudget.cshtml
@@ -389,7 +389,7 @@
         var headers = ['ID', 'Material Existente', 'Tipo Material', 'Planta', 'Peso bruto REAL bascula (kg)', 'Peso neto REAL bascula (kg)', 'Ángulo A', 'Ángulo B', 'Scrap permitido Puntas y Colas'
             , 'Piezas Dobles', 'Reaplicación', 'Conciliación puntas y colas', 'Conciliación Scrap Ingenieria'
             , 'Tipo de Metal', 'Tipo de Material', 'Tipo de Venta', 'Modelo de Negocio', 'Posición de Rollo'
-            , 'IHS num 1', 'IHS num 2', 'IHS num 3', 'IHS num 4', 'IHS num 5'
+            , 'S&P 1 (antes IHS)', 'S&P 2 (antes IHS)', 'S&P 3 (antes IHS)', 'S&P 4 (antes IHS)', 'S&P 5 (antes IHS)'
             , 'Piezas por auto', 'Piezas por golpe', 'Piezas por paquete', 'Peso Inicial', 'Peso Máximo', 'Peso Maximo Tolerancia Positiva', 'Peso Maximo Tolerancia Negativa'
             , 'Peso Minimo', 'Peso Mínimo Tolerancia Positiva', 'Peso Mínimo Tolerancia Negativa'
 
@@ -504,11 +504,11 @@
                             case GetColFromName("Tipo de Venta"):
                             case GetColFromName("Modelo de Negocio"):
                             case GetColFromName("Posición de Rollo"):
-                            case GetColFromName("IHS num 1"):
-                            case GetColFromName("IHS num 2"):
-                            case GetColFromName("IHS num 3"):
-                            case GetColFromName("IHS num 4"):
-                            case GetColFromName("IHS num 5"):
+                            case GetColFromName("S&P 1 (antes IHS)"):
+                            case GetColFromName("S&P 2 (antes IHS)"):
+                            case GetColFromName("S&P 3 (antes IHS)"):
+                            case GetColFromName("S&P 4 (antes IHS)"):
+                            case GetColFromName("S&P 5 (antes IHS)"):
                             case GetColFromName("Piezas por auto"):
                             case GetColFromName("Piezas por golpe"):
                             case GetColFromName("Piezas por paquete"):
@@ -733,21 +733,7 @@
                             }
                         }
                     },
-                     { //IHS5
-                        type: 'autocomplete', strict: false, filter: true, source: iHSArray,
-                        validator: function (value, callback) {
-                            let max = 120;
-                            if ((value != null && value.length > max)) {
-                                if (!toastMixin.isVisible())
-                                    toastMixin.fire({ title: 'Este campo debe ser de ' + max + ' carácteres o menos.', icon: 'warning' });
-                                callback(false);
-                                // this.instance.setDataAtCell(this.row, this.col, value.substring(0, max), null);
-                            }
-                            else {
-                                callback(true);
-                            }
-                        }
-                    },
+                    { readOnly: true }, //IHS 5
                     { type: 'numeric', validator: 'CustomNumbersValidator' }, //Piezas por auto
                     { type: 'numeric', validator: 'CustomNumbersValidator' }, //Piezas por golpe
                     { type: 'numeric', validator: 'CustomNumbersValidator' }, //Piezas por paquete
@@ -781,11 +767,11 @@
                     130, //Tipo de Venta
                     230, //Modelo de Negocio
                     180, //Posición de Rollo
-                    450, //IHS num 1
-                    450, //IHS num 2
-                    450, //IHS num 3
-                    450, //IHS num 4
-                    450,//IHS num 5
+                    450, //S&P 1 (antes IHS)
+                    450, //S&P 2 (antes IHS)
+                    450, //S&P 3 (antes IHS)
+                    450, //S&P 4 (antes IHS)
+                    450,//S&P 5 (antes IHS)
                     110, //Piezas por auto
                     120, //Piezas por golpe
                     130, //Piezas por paquete
@@ -820,17 +806,15 @@
                 },
                 afterChange: (changes) => {
                     changes?.forEach(([row, prop, oldValue, newValue]) => {
-                        // switch (prop) {
-                        //    case GetColFromName("Espesor (mm)"): //espesor
+                         switch (prop) {
+                             case GetColFromName("S&P 1 (antes IHS)"): //IHS
+                             case GetColFromName("S&P 2 (antes IHS)"): //IHS
+                             case GetColFromName("S&P 3 (antes IHS)"): //IHS
+                             case GetColFromName("S&P 4 (antes IHS)"): //IHS
+                                 ConcatenaIHS(row, newValue);
+                                 break;
 
-                        //     CambioDimensiones(row);
-                        //        break;
-                        //    case GetColFromName("Núm. cliente"): //diametro interior
-
-                        //        //cambioDescripcion(row);
-                        //        break;
-
-                        //}
+                        }
 
 
                     });
@@ -909,6 +893,58 @@
                     return cellProperties;
                 },
             });
+
+        }
+
+        //en caso de que se modifique el IHS
+        function ConcatenaIHS(row, newValue) {
+
+            let spValues = [
+                hot.getDataAtCell(row, GetColFromName("S&P 1 (antes IHS)")),
+                hot.getDataAtCell(row, GetColFromName("S&P 2 (antes IHS)")),
+                hot.getDataAtCell(row, GetColFromName("S&P 3 (antes IHS)")),
+                hot.getDataAtCell(row, GetColFromName("S&P 4 (antes IHS)"))
+            ];
+
+            // Realiza la llamada AJAX para concatenar los valores IHS
+            $.ajax({
+                type: 'POST',
+                url: '/SCDM_solicitud/ConcatenateIHS',
+                data: { spValues: spValues },
+                success: function (data) {
+                    // Actualiza la celda correspondiente con el valor concatenado
+                    hot.setDataAtCell(row, GetColFromName("S&P 5 (antes IHS)"), data.concatenatedIHS);
+                },
+                error: function () {
+                    console.error('Error al concatenar los valores IHS.');
+                }
+            });
+
+            if (newValue === 'Otros') {
+
+                //determina si el cliente es automotriz
+                let cliente = hot.getDataAtCell(row, GetColFromName("Núm. cliente"));
+
+                // Realiza la llamada AJAX para verificar si el cliente es automotriz
+                $.ajax({
+                    type: 'POST',
+                    url: '/SCDM_solicitud/CheckIfClientIsAutomotive',
+                    data: { cliente: cliente },
+                    success: function (data) {
+                        if (data.isAutomotive) {
+                            Swal.fire({
+                                icon: 'warning',
+                                title: 'Advertencia',
+                                text: 'El valor de S&P no debe ser "Otros" cuando el cliente es de tipo automotriz.',
+                                confirmButtonText: 'Aceptar'
+                            });
+                        }
+                    },
+                    error: function () {
+                        console.error('Error al verificar el tipo de cliente.');
+                    }
+                });
+            }
 
         }
 
@@ -1258,11 +1294,11 @@
                                hot.setDataAtCell(row, GetColFromName("Tipo de Venta"), data[0].type_selling);
                                hot.setDataAtCell(row, GetColFromName("Modelo de Negocio"), data[0].modelo_negocio);
                                hot.setDataAtCell(row, GetColFromName("Posición de Rollo"), data[0].posicionRollo);
-                               hot.setDataAtCell(row, GetColFromName("IHS num 1"), data[0].ihs_1);
-                               hot.setDataAtCell(row, GetColFromName("IHS num 2"), data[0].ihs_2);
-                               hot.setDataAtCell(row, GetColFromName("IHS num 3"), data[0].ihs_3);
-                               hot.setDataAtCell(row, GetColFromName("IHS num 4"), data[0].ihs_4);
-                               hot.setDataAtCell(row, GetColFromName("IHS num 5"), data[0].ihs_5);
+                               hot.setDataAtCell(row, GetColFromName("S&P 1 (antes IHS)"), data[0].ihs_1);
+                               hot.setDataAtCell(row, GetColFromName("S&P 2 (antes IHS)"), data[0].ihs_2);
+                               hot.setDataAtCell(row, GetColFromName("S&P 3 (antes IHS)"), data[0].ihs_3);
+                               hot.setDataAtCell(row, GetColFromName("S&P 4 (antes IHS)"), data[0].ihs_4);
+                               hot.setDataAtCell(row, GetColFromName("S&P 5 (antes IHS)"), data[0].ihs_5);
                                hot.setDataAtCell(row, GetColFromName("Piezas por auto"), data[0].piezas_por_auto);
                                hot.setDataAtCell(row, GetColFromName("Piezas por golpe"), data[0].piezas_por_golpe);
                                hot.setDataAtCell(row, GetColFromName("Piezas por paquete"), data[0].piezas_por_paquete);
@@ -1278,6 +1314,15 @@
                                if (data[0].planta == plantaSapSolicitud) {
                                    toastMixin.fire({ title: 'Se cargaron los datos correctamente', icon: 'success' });
                                    hot.setDataAtCell(row, GetColFromName("Valido"), "true");
+
+                                   setTimeout(() => {
+                            
+                                       //llama metodo para concatenar IHS 
+                                       ConcatenaIHS(row, '');
+
+                                   }, 500);
+
+
                                } else {
                                  //  toastMixin.fire({ title: 'El material de referencia no corresponde con la planta de la solicitud: '+ data[0].planta+ ' != '+'@Html.Raw(String.Join(", ", @Model.SCDM_rel_solicitud_plantas.Select(x => x.plantas.codigoSap).Distinct().ToList()))', icon: 'warning' });
                                    Swal.fire({
