2024-12-04 Avance de Conteo Inventario.

--- a/CódigoFuente/BitacorasProduccion/Views/CI_conteo_inventario/Inventario.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CI_conteo_inventario/Inventario.cshtml
@@ -364,16 +364,16 @@
                         },
                         className: "htRight"
                     }, //Espesor
-                    { readOnly: true, className: "htRight" }, //Piezas
-                    { readOnly: true, className: "htRight" }, //Piezas Min
-                    { readOnly: true, className: "htRight" }, //Piezas Max
-                    { readOnly: true, className: "htRight" }, //Total Piezas
-                    { readOnly: true, className: "htRight" }, //Piezas SUM
-                    { readOnly: true, className: "htRight" }, //Piezas Min SUM
-                    { readOnly: true, className: "htRight" }, //Piezas Max SUM
-                    { readOnly: true, className: "htRight" }, //Cantidad Teotica
-                    { readOnly: true, className: "htRight" }, //Diferencia SAP
-                    { readOnly: true, className: "htRight" }, //Validación
+                    { readOnly: false, className: "htRight" }, //Piezas
+                    { readOnly: false, className: "htRight" }, //Piezas Min
+                    { readOnly: false, className: "htRight" }, //Piezas Max
+                    { readOnly: false, className: "htRight" }, //Total Piezas
+                    { readOnly: false, className: "htRight" }, //Piezas SUM
+                    { readOnly: false, className: "htRight" }, //Piezas Min SUM
+                    { readOnly: false, className: "htRight" }, //Piezas Max SUM
+                    { readOnly: false, className: "htRight" }, //Cantidad Teotica
+                    { readOnly: false, className: "htRight" }, //Diferencia SAP
+                    { readOnly: false, className: "htRight" }, //Validación
                 ],
                 hiddenColumns: {
                     // specify columns hidden by default
@@ -525,15 +525,15 @@
                 { type: 'numeric', validator: 'CustomNumbersValidator', className: "htRight" },//Altura
                 { type: 'numeric', validator: 'CustomNumbersValidator', className: "htRight" }, //Espesor
                 { readOnly: false, className: "htRight" }, //ubicación fisica
-                { readOnly: true, className: 'bold-cell htRight' }, //Piezas SAP
-                { readOnly: true, className: "htRight" }, //Piezas MIN
-                { readOnly: true, className: "htRight" }, //Piezas MAX
-                { readOnly: true, className: 'bold-cell htRight' }, //Total Piezas SAP
-                { readOnly: true, className: "htRight" }, //Piezas MIN sum
-                { readOnly: true, className: "htRight" }, //Piezas MAX sum
-                { readOnly: true, className: 'bold-cell htRight' }, //Cantidad Teórica
-                { readOnly: true, className: "htRight" }, //Diferencia SAP
-                { readOnly: true, className: "htRight" }, //Validación
+                { readOnly: false, className: 'bold-cell htRight' }, //Piezas SAP
+                { readOnly: false, className: "htRight" }, //Piezas MIN
+                { readOnly: false, className: "htRight" }, //Piezas MAX
+                { readOnly: false, className: 'bold-cell htRight' }, //Total Piezas SAP
+                { readOnly: false, className: "htRight" }, //Piezas MIN sum
+                { readOnly: false, className: "htRight" }, //Piezas MAX sum
+                { readOnly: false, className: 'bold-cell htRight' }, //Cantidad Teórica
+                { readOnly: false, className: "htRight" }, //Diferencia SAP
+                { readOnly: false, className: "htRight" }, //Validación
                 { readOnly: false, className: "htRight" }, //comentario
                 { readOnly: true, className: 'htMiddle', renderer: "html" },
                 { readOnly: true, className: "htRight" }, //cambio
